[package]
name = "fips204_rs"
description = "FIPS 204: Module-Lattice-Based Digital Signature"
version = "1.0.0"
authors = ["John Yu <cb8866@sina.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["FIPS204", "lattice", "dilithium", "signature"]
categories = ["cryptography", "no-std"]
# MSRV set at 1.70, This requires several marginally outdated dependencies, see below
rust-version = "1.70"

[features]
default = ["default-rng"]
default-rng = ["rand_core/getrandom"]

[dependencies]
zeroize = { version = "1.6.0", default-features = false, features = [
    "zeroize_derive",
] }
rand_core = { version = "0.6.4", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
sha3 = { version = "0.10.2", default-features = false }

[dev-dependencies] # Some are marginally held-back to retain MSRV 1.70
criterion = "0.4.0"
hex = "0.4.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.10.2"
serde_json = { version = "1.0.127", features = [] }

[profile.dev]
debug = true
#lto = true
opt-level = 1
#codegen-units = 1


[profile.release]
lto = true
opt-level = "s"
codegen-units = 1


[[bench]]
name = "benchmark"
harness = false

[profile.bench]
debug = true
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
codegen-units = 1
